--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 </div>
             </section>
             <section class="projects" id="projects">
+                <h4>My Projects</h4>
                 <div class="cards-direction">
                     <div class="project-cards">
                         <img
