--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
                         </footer>
                     </div>
                 </div>
+                <div class="projects-background-details">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </section>
         </main>
         <!-- javascript -->
