--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a
                             href="./files/CV-FranciscoHellbusch.pdf"
                             download="CV - Francisco Hellbusch"
-                            >CV
+                        >
                             <svg
                                 viewBox="0 0 24 24"
                                 fill="none"
@@ -71,7 +71,8 @@
                                     stroke-linecap="round"
                                     stroke-linejoin="round"
                                 /></svg
-                        ></a>
+                            >CV</a
+                        >
                     </div>
                     <div class="icons-home">
                         <a
@@ -881,6 +882,53 @@
                                 </svg>
                                 <b>Jira</b>
                             </span>
+                        </div>
+                    </aside>
+                </div>
+                <!-- studies -->
+                <div class="about-me-studies">
+                    <h4>Education</h4>
+                    <aside class="studies-map">
+                        <img src="./assets/coder-logo.png" alt="coder-logo" />
+                        <div class="studies-map-sections">
+                            <div class="courses-coder">
+                                <h6>FrontEnd</h6>
+                                <ul>
+                                    <li>Apps web in React.</li>
+                                    <li>
+                                        Firebase Storage and Authentication.
+                                    </li>
+                                    <li>Sass language.</li>
+                                    <li>CSS frameworks.</li>
+                                </ul>
+                            </div>
+                            <div class="courses-coder">
+                                <h6>BackEnd</h6>
+                                <ul>
+                                    <li>
+                                        API development with Node JS and
+                                        Express.
+                                    </li>
+                                    <li>
+                                        Work with databases like MongoDB or
+                                        MySQL.
+                                    </li>
+                                    <li>Web Sockets implementation.</li>
+                                    <li>Testing with Jest.</li>
+                                </ul>
+                            </div>
+                            <div class="courses-coder">
+                                <h6>Cloud Computing AWS</h6>
+                                <ul>
+                                    <li>
+                                        Servicios Cloud: EC2, S3, RDS, DynamoDB,
+                                        Lambda, etc.
+                                    </li>
+                                    <li>Management of cost structures.</li>
+                                    <li>CloudWatch and CloudFormation.</li>
+                                    <li>cloud migration plans.</li>
+                                </ul>
+                            </div>
                         </div>
                     </aside>
                 </div>
