--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Francisco Hellbusch</title>
+        <!-- AOS -->
+        <link
+            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+            rel="stylesheet"
+        />
         <!-- css -->
         <link rel="stylesheet" href="./index.css" />
     </head>
@@ -23,7 +28,7 @@
                     <a class="nav-links-anchors" href="#">Home</a>
                     <a class="nav-links-anchors" href="#projects">Projects</a>
                     <a class="nav-links-anchors" href="#aboutMe">About me</a>
-                    <a class="nav-links-anchors" href="#">Contact</a>
+                    <a class="nav-links-anchors" href="#contactMe">Contact</a>
                 </div>
                 <div class="darkmode-button">
                     <input type="checkbox" id="darkmodeToggle" />
@@ -43,8 +48,14 @@
                     <div class="home-subtitle">
                         <p>I'm Full-Stack Web Developer</p>
                     </div>
-                    <div class="home-buttons">
-                        <button>Contact me</button>
+                    <div
+                        class="home-buttons"
+                        data-aos="fade-up"
+                        data-aos-duration="500"
+                    >
+                        <button onclick="location.href='#contactMe'">
+                            Contact me
+                        </button>
                         <button onclick="location.href='#projects'">
                             Projects
                         </button>
@@ -133,7 +144,11 @@
             <section class="projects" id="projects">
                 <h4>My Projects</h4>
                 <div class="cards-direction">
-                    <div class="project-cards">
+                    <div
+                        class="project-cards"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                    >
                         <img
                             src="./assets/finance-dashboard-project.png"
                             alt="finance-dashboard-project"
@@ -204,7 +219,11 @@
                             </div>
                         </footer>
                     </div>
-                    <div class="project-cards">
+                    <div
+                        class="project-cards"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                    >
                         <img
                             src="./assets/morito-project.png"
                             alt="morito-project"
@@ -281,7 +300,11 @@
                             </div>
                         </footer>
                     </div>
-                    <div class="project-cards">
+                    <div
+                        class="project-cards"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                    >
                         <img
                             src="./assets/ecommerce-react-project.png"
                             alt="react-ecommerce-project"
@@ -355,7 +378,11 @@
                             </div>
                         </footer>
                     </div>
-                    <div class="project-cards">
+                    <div
+                        class="project-cards"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                    >
                         <img
                             src="./assets/ecommecre-api-project.png"
                             alt="morito-project"
@@ -422,7 +449,11 @@
                 <div class="about-me-skills">
                     <h4>Skills</h4>
                     <aside class="skills-position">
-                        <div class="front-end-skills skill-group">
+                        <div
+                            class="front-end-skills skill-group"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                        >
                             <h5>FrontEnd</h5>
                             <span>
                                 <svg
@@ -522,7 +553,11 @@
                                 <b>Sass</b>
                             </span>
                         </div>
-                        <div class="back-end-skills skill-group">
+                        <div
+                            class="back-end-skills skill-group"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                        >
                             <h5>BackEnd</h5>
                             <span>
                                 <svg
@@ -600,7 +635,11 @@
                                 <b>Docker</b>
                             </span>
                         </div>
-                        <div class="cloud-skills skill-group">
+                        <div
+                            class="cloud-skills skill-group"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                        >
                             <h5>AWS Cloud</h5>
                             <span>
                                 <svg
@@ -780,7 +819,11 @@
                                 <b>more...</b>
                             </span>
                         </div>
-                        <div class="others-skills skill-group">
+                        <div
+                            class="others-skills skill-group"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                        >
                             <h5>Others</h5>
                             <span>
                                 <svg
@@ -888,7 +931,11 @@
                 <!-- studies -->
                 <div class="about-me-studies">
                     <h4>Education</h4>
-                    <aside class="studies-map">
+                    <aside
+                        class="studies-map"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                    >
                         <img src="./assets/coder-logo.png" alt="coder-logo" />
                         <div class="studies-map-sections">
                             <div class="courses-coder">
@@ -899,7 +946,10 @@
                                         Firebase Storage and Authentication.
                                     </li>
                                     <li>Sass language.</li>
-                                    <li>CSS frameworks.</li>
+                                    <li>
+                                        CSS frameworks like Bootstrap or
+                                        Tailwind.
+                                    </li>
                                 </ul>
                             </div>
                             <div class="courses-coder">
@@ -933,6 +983,92 @@
                     </aside>
                 </div>
             </section>
+            <!-- CONTACT SECTION -->
+            <section class="contact-section" id="contactMe">
+                <div class="contact-direction">
+                    <div class="contact-form">
+                        <h4>Contact</h4>
+                        <form
+                            action=""
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                        >
+                            <div class="input-group">
+                                <input
+                                    type="text"
+                                    placeholder="Name"
+                                    name="user_name"
+                                />
+                                <input
+                                    type="text"
+                                    placeholder="Email"
+                                    name="user_email"
+                                />
+                            </div>
+                            <input
+                                type="text"
+                                placeholder="Subject"
+                                name="user_subject"
+                            />
+                            <textarea
+                                placeholder="Message"
+                                name="user_message"
+                            ></textarea>
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                    <div class="contact-social-media">
+                        <a
+                            href="https://www.linkedin.com/in/fhdeveloper/"
+                            target="_blank"
+                        >
+                            <svg
+                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vubbuv"
+                                focusable="false"
+                                aria-hidden="true"
+                                viewBox="0 0 24 24"
+                                data-testid="LinkedInIcon"
+                            >
+                                <path
+                                    d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
+                                ></path>
+                            </svg>
+                            LinkedIn
+                        </a>
+                        <a href="https://wa.me/+543388670766" target="_blank">
+                            <svg
+                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vubbuv"
+                                focusable="false"
+                                aria-hidden="true"
+                                viewBox="0 0 24 24"
+                                data-testid="WhatsAppIcon"
+                            >
+                                <path
+                                    d="M16.75 13.96c.25.13.41.2.46.3.06.11.04.61-.21 1.18-.2.56-1.24 1.1-1.7 1.12-.46.02-.47.36-2.96-.73-2.49-1.09-3.99-3.75-4.11-3.92-.12-.17-.96-1.38-.92-2.61.05-1.22.69-1.8.95-2.04.24-.26.51-.29.68-.26h.47c.15 0 .36-.06.55.45l.69 1.87c.06.13.1.28.01.44l-.27.41-.39.42c-.12.12-.26.25-.12.5.12.26.62 1.09 1.32 1.78.91.88 1.71 1.17 1.95 1.3.24.14.39.12.54-.04l.81-.94c.19-.25.35-.19.58-.11l1.67.88M12 2a10 10 0 0 1 10 10 10 10 0 0 1-10 10c-1.97 0-3.8-.57-5.35-1.55L2 22l1.55-4.65A9.969 9.969 0 0 1 2 12 10 10 0 0 1 12 2m0 2a8 8 0 0 0-8 8c0 1.72.54 3.31 1.46 4.61L4.5 19.5l2.89-.96A7.95 7.95 0 0 0 12 20a8 8 0 0 0 8-8 8 8 0 0 0-8-8z"
+                                ></path>
+                            </svg>
+                            WhatsApp
+                        </a>
+                        <a
+                            href="https://www.instagram.com/franhellbusch/"
+                            target="_blank"
+                        >
+                            <svg
+                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-vubbuv"
+                                focusable="false"
+                                aria-hidden="true"
+                                viewBox="0 0 24 24"
+                                data-testid="InstagramIcon"
+                            >
+                                <path
+                                    d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z"
+                                ></path>
+                            </svg>
+                            Instagram
+                        </a>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- javascript -->
         <script src="./index.js"></script>
@@ -941,5 +1077,10 @@
             src="https://kit.fontawesome.com/de50d5ca80.js"
             crossorigin="anonymous"
         ></script>
+        <!-- AOS script -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
