footer-section finished

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                         />
                         <h4>Finance Dashboard</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Fugiat beatae error quis aspernatur porro eum,
-                            doloremque magnam dolorum, ad voluptate eligendi
-                            labore itaque amet eveniet eos
+                            This project was created with the objective of
+                            gaining more solidity in my structure and management
+                            of the code, implementing TypeScript in both the
+                            Front-end and the Back-end.
                         </p>
                         <footer>
                             <div class="cards-technologies">
@@ -230,10 +230,10 @@
                         />
                         <h4>Morito</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Fugiat beatae error quis aspernatur porro eum,
-                            doloremque magnam dolorum, ad voluptate eligendi
-                            labore itaque amet eveniet eos
+                            Morito is a project that involved a group of
+                            CoderHouse students, with the aim of gaining real
+                            experience with clients. I had the opportunity to
+                            work with another developer and two UX UI designers.
                         </p>
                         <footer>
                             <div class="cards-technologies">
@@ -311,10 +311,10 @@
                         />
                         <h4>E-commerce</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Fugiat beatae error quis aspernatur porro eum,
-                            doloremque magnam dolorum, ad voluptate eligendi
-                            labore itaque amet eveniet eos
+                            This is my final project of React JS in CoderHouse,
+                            I implemented all the knowledge acquired during my
+                            course, making an e-commece that includes
+                            authentication and a good visual interface.
                         </p>
                         <footer>
                             <div class="cards-technologies">
@@ -389,10 +389,10 @@
                         />
                         <h4>E-commerce API</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Fugiat beatae error quis aspernatur porro eum,
-                            doloremque magnam dolorum, ad voluptate eligendi
-                            labore itaque amet eveniet eos
+                            In this project I put into practice the knowledge I
+                            gained during my Back-end course at Coderhouse,
+                            implementing Testing tools, Databases,
+                            Authentication etc.
                         </p>
                         <footer>
                             <div class="cards-technologies">
@@ -437,11 +437,14 @@
                     <div class="about-me-text">
                         <h4>About <b>Me</b></h4>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Eligendi illo officiis laborum ut non quia!
-                            Cumque sint numquam repellendus voluptatum quibusdam
-                            explicabo, quasi eveniet pariatur amet qui officia
-                            temporibus quod.
+                            My name is Francisco Hellbusch, Full stack
+                            developer, I'm 18 years old. I have been studying
+                            web development for almost 2 years, I'm looking for
+                            my first experiences in a competitive IT
+                            environment, I dedicate myself to constantly
+                            improving my knowledge and skills, striving for
+                            continuous improvement to be at my best and ready to
+                            face new challenges.
                         </p>
                     </div>
                 </div>
@@ -1070,6 +1073,16 @@
                 </div>
             </section>
         </main>
+        <footer class="footer-section">
+            <p>
+                Developed by
+                <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/fhdeveloper/"
+                    >Francisco Hellbusch</a
+                >
+            </p>
+        </footer>
         <!-- javascript -->
         <script src="./index.js"></script>
         <!-- fontawesome icons -->
