--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Francisco Hellbusch</title>
+        <!-- emailjs script -->
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+        ></script>
+
         <!-- AOS -->
         <link
             href="https://unpkg.com/aos@2.3.1/dist/aos.css"
@@ -992,6 +998,7 @@
                     <div class="contact-form">
                         <h4>Contact</h4>
                         <form
+                            id="contactForm"
                             action=""
                             data-aos="fade-up"
                             data-aos-duration="1000"
@@ -1001,23 +1008,29 @@
                                     type="text"
                                     placeholder="Name"
                                     name="user_name"
+                                    required
                                 />
                                 <input
-                                    type="text"
+                                    type="email"
                                     placeholder="Email"
                                     name="user_email"
+                                    required
                                 />
                             </div>
                             <input
                                 type="text"
                                 placeholder="Subject"
                                 name="user_subject"
+                                required
                             />
                             <textarea
                                 placeholder="Message"
                                 name="user_message"
+                                required
                             ></textarea>
-                            <button type="submit">Submit</button>
+                            <button id="sendFormButton" type="submit">
+                                Submit
+                            </button>
                         </form>
                     </div>
                     <div class="contact-social-media">
