--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
+        <!-- loader -->
+        <div class="loader">
+            <div class="loading-wave">
+                <span class="loading-bar"></span>
+                <span class="loading-bar"></span>
+                <span class="loading-bar"></span>
+                <span class="loading-bar"></span>
+            </div>
+        </div>
         <!-- navbar -->
         <header>
             <nav>
